--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>H</span>
         <span>A</span>
         <span>L</span>
-        <span>L</span>
-        <span>O</span>
+        <span>Y</span>
+        <span>A</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span>tenang saja aku bukan laki-laki yang gila dengan perempuan, temani saja prosesku, nanti akanku ratukan dirimu, aku tidak menuntut banyak<br\>jadilah perempuan yang tulus yang hanya cukup satu laki-laki!</span>
     </div>
     <div class="button">
         <button>
