--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
         <span>L</span>
         <span>Y</span>
         <span>A</span>
+        <span>,</span>
+        <span>C</span>
+        <span>I</span>
+        <span>N</span>
+        <span>D</span>
+        <span>O</span>
     </div>
     <div class="description">
-        <span>tenang saja aku bukan laki-laki yang gila dengan perempuan, temani saja prosesku, nanti akanku ratukan dirimu, aku tidak menuntut banyak<br\>jadilah perempuan yang tulus yang hanya cukup satu laki-laki!</span>
+        <span>tenang saja aku bukan laki-laki yang gila dengan perempuan, temani saja prosesku,</p>nanti akanku ratukan dirimu, aku tidak menuntut banyak jadilah perempuan yang tulus yang hanya cukup satu laki-laki!</p></span>
     </div>
     <div class="button">
         <button>
